Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 7.37 (29/05/02)
- added Trivial_iterator.h 
- added DS_Container.h to package Triangulation_2 to reduce dependencies wrto
  Triangulation_3

Ver 7.36 (28/05/02)
- nothing.

Ver 7.33 (28/05/02)
- fixed details in doc

Ver 7.32 (13/05/02)
- fixed undefined references in the doc

Ver 7.31 (9/05/02)
- fixed previous hack
- update the doc 

Ver 7.30 (7/05/02)
- added  a hack to compile on Sun_CC

Ver 7.29 (7/05/02)
- fixed label in doc

Ver 7.28 (3/05/02)
- add a workaround in Constraint_hierarchy_2.h
  for the splice bug of CC
- add missing references

Ver 7.27 (23/04/02)
- split support /Handle doc into user and reference manuals

Ver 7.26 (23/04/02)
- fixes in doc

Ver 7.25 (17/04/02)
- fixes in doc

Ver 7.24 (15/04/02)
- fix in the doc

Ver 7.23 (15/04/02)
- updated the doc of constrained triangulations
- fixed demo/Triangulation_2/constrained.C for VC6

Ver 7.22 (12/04/02)
- doc fixes

Ver 7.21 (11/04/02)
- again a fix for VC7
- splitted manual pages for Handle

Ver 7.20 (10/04/02)
- add special_insert_in_edge() for Delaunay_constrained_triangulations
- fixes for VC7

Ver 7.19 (08/04/02)
- fixed copy constructor oc Constraint_hierarchy

Ver 7.18 (08/04/02)
- fixed intersect functions in Constrained triangulations 
  and Constrained_triangulation_plus 
  (virtual - non vritual, partial overriding)

Ver 7.17 (05/04/02)
- try to fixed "unused parameter warnings"

Ver 7.16 (04/04/12)
- try to fixed "unused parameter warnings" from Constrained triangulations

Ver 7.15 (03/04/02)
- fixed Constrained triangulation so that default is with No_intersection_tag
- and does not require intersection types from the traits class
- fixed Triangulation_euclidean_traits* to work with Kernel traits

Ver 7.14 (25/03/02)
- added copy and swap to Constrained_triangulation_plus_2
- fixed Constrained_triangulation_plus_2 with Exact_intersections_tag