@@ -135,7 +135,7 @@ This class provides the functions \ccc{cw(i)} et \ccc{ccw(i)}.
 \ccTypes
 \ccTypedef{typedef Traits Geom_traits;}{the traits class.}
 \ccGlue
-\ccNestedType{Tds}{the triangulation data structure type.}
+\ccTypedef{typedef Tds Triangulation_data_structure;}{the triangulation data structure type.}
 
 \ccTypedef{typedef Traits::Point Point;}{the point type}
 \ccGlue
@@ -145,7 +145,7 @@ This class provides the functions \ccc{cw(i)} et \ccc{ccw(i)}.
 
 \ccTypedef{typedef Tds::Vertex Vertex;}{the vertex type.}
 \ccGlue
-\ccNestedType{typedef Tds::Face Face }{the face type.}
+\ccTypedef{typedef Tds::Face Face;}{the face type.}
 \ccGlue
 \ccTypedef{typedef Tds::Edge  Edge;} {the edge type.}
 
